common/underdog-fantasy/base/notebook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golf-sgp-lite-main-pe-develop
  namespace: pricing-engine
spec:
  selector:
    notebook-name: golf-sgp-lite-main-pe-develop
  ports:
    - name: http
      port: 80
      targetPort: 8888
