common/underdog-fantasy/base/allow-kubeflow-users.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-kubeflow-users
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: centraldashboard
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
